--- a/public/assets/views/pages/products.html
+++ b/public/assets/views/pages/products.html
@@ -2,82 +2,12 @@
     <div class="column col-12  mt-2 mb-2 pt-2 pb-2">
         <div class="columns">
             <div class="column col-10 p-centered mb-2 pb-2">
-                <h1 class="h3">Nos kits de clotures</h1>
-                <div class="desc">Nos kits a monter soi même</div>
+                <h1 class="h3">Nos articles disponibles au détail</h1>
+                <div class="desc">Retrouvez l'intégralité de nos produits sur cette page</div>
             </div>
         </div>
     </div>
-    <div class="column filters col-2 col-lg-12">
-        <div class="h6">Filtres</div>
 
-        <div class="divider"></div>
-
-        <div class="accordion">
-            <input type="checkbox" id="accordion-1" name="accordion-checkbox" checked hidden>
-            <label class="accordion-header h6 c-hand" for="accordion-1">
-                <span>Type</span> <svg class="feather float-right"><use xlink:href="assets/svg/feather-sprite.svg#plus"/></svg>
-            </label>
-            <div class="accordion-body ml-2 pl-2" data-filter-group="type">
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="persienne" checked>
-                    <i class="form-icon"></i> Persienne
-                </label>
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="lame-large" checked>
-                    <i class="form-icon"></i> Lame large
-                </label>
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="claire-voie" checked>
-                    <i class="form-icon"></i> Claire voie
-                </label>
-            </div>
-        </div>
-
-        <div class="divider"></div>
-        <div class="accordion">
-            <input type="checkbox" id="accordion-2" name="accordion-checkbox" checked hidden>
-            <label class="accordion-header h6 c-hand" for="accordion-2">
-                <span>Section</span> <svg class="feather float-right"><use xlink:href="assets/svg/feather-sprite.svg#plus"/></svg>
-            </label>
-            <div class="accordion-body ml-2 pl-2" data-filter-group="section">
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="droit" checked>
-                    <i class="form-icon"></i> droit
-                </label>
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="angle" checked>
-                    <i class="form-icon"></i> angle
-                </label>
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="courbe" checked>
-                    <i class="form-icon"></i> courbe
-                </label>
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="redan" checked>
-                    <i class="form-icon"></i> redan
-                </label>
-            </div>
-        </div>
-        <div class="divider"></div>
-        <div class="accordion">
-            <input type="checkbox" id="accordion-3" name="accordion-checkbox" checked hidden>
-            <label class="accordion-header h6 c-hand" for="accordion-3">
-                <span>Support</span> <svg class="feather float-right"><use xlink:href="assets/svg/feather-sprite.svg#plus"/></svg>
-            </label>
-            <div class="accordion-body ml-2 pl-2" data-filter-group="support">
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="platine" checked>
-                    <i class="form-icon"></i> platine
-                </label>
-                <label class="form-checkbox">
-                    <input type="checkbox" data-filter="scelle" checked>
-                    <i class="form-icon"></i> scellé
-                </label>
-            </div>
-        </div>
-
-    </div>
     <div class="column col-10 col-lg-12">
-        <div data-cat="brise-vue" data-count="-1" class="categoriesElement columns m-2 justify-around"></div>
     </div>
 </div>
