--- a/public/assets/views/parts/navbar.html
+++ b/public/assets/views/parts/navbar.html
@@ -1,12 +1,14 @@
 <header class="navbar pt-2 pb-2 mt-2 mb-2">
     <section class="navbar-section">
-        <a href="#" class="navbar-brand mr-2"><svg class="feather" data-modalTarget="userMenu"><use xlink:href="assets/svg/feather-sprite.svg#home"/></svg></a>
+        <a href="#"><img class="navbar-brand" src="assets/images/logo_cloture_francaise_final2.png" width="200px"></a>
+    </section>
+    <section class="navbar-center">
         <a href="#" class="btn btn-link mr-2">Accueil</a>
         <a href="#nos-clotures" class="btn btn-link mr-2">Nos clotures</a>
         <a href="#nos-articles" class="btn btn-link mr-2">Nos articles</a>
         <a href="#aide-pose" class="btn btn-link mr-2">Aide à la pose</a>
         <a href="#who" class="btn btn-link mr-2">Qui somme nous ?</a>
-        <a href="#contact" class="btn btn-link mr-2">Contact</a>
+        <a href="#nous-contactez" class="btn btn-link mr-2">Contact</a>
     </section>
     <section class="navbar-section">
         <button class="btn btn-action btn-link c-hand mr-2 badge" data-badge="0" data-modalTarget="cart" aria-label="Panier vide" id="buttonCart"><svg class="feather" data-modalTarget="cart"><use xlink:href="assets/svg/feather-sprite.svg#shopping-cart"/></svg></button>
