--- a/public/assets/sass/_variables.scss
+++ b/public/assets/sass/_variables.scss
@@ -3,7 +3,7 @@
  */
 
 // Core colors
-$primary-color: #282727 !default;
+$primary-color: #223a46 !default;
 $primary-color-dark: darken($primary-color, 3%) !default;
 $primary-color-light: lighten($primary-color, 3%) !default;
 $secondary-color: lighten($primary-color, 37.5%) !default;
@@ -11,8 +11,8 @@ $secondary-color-dark: darken($secondary-color, 3%) !default;
 $secondary-color-light: lighten($secondary-color, 3%) !default;
 
 // Gray colors
-$dark-color: #afbcbc !default;
-$light-color: #e2e3d5 !default;
+$dark-color: #1b1c1d !default;
+$light-color: #f8fafc !default;
 $gray-color: lighten($dark-color, 55%) !default;
 $gray-color-dark: darken($gray-color, 30%) !default;
 $gray-color-light: lighten($gray-color, 20%) !default;
