--- a/public/assets/views/pages/config_claire_voie.html
+++ b/public/assets/views/pages/config_claire_voie.html
@@ -1,19 +1,20 @@
 <div class="columns p-centered mb-2 pb-2">
     <div class="column col-10 col-md-12 p-centered">
         <div class="columns">
-            <div class="column col-5 col-sm-12">
-                <img class="w-75 d-block m-auto pt-2 mt-2" id="" src="assets/images/claire_voie.png" alt="">
+            <div class="column col-6 col-sm-12">
+                <img class="w-75 d-block m-auto pt-2 mt-2" id="" src="assets/images/cloture-aluminium-lame-pleine.png"
+                     alt="">
             </div>
-            <div class="column col-sm-12">
-                <h1 id="name" class="h3"></h1>
+            <div class="column col-6 col-sm-12">
+                <h1 id="name" class="h3 col-12 m-auto">Configurateur pour lame claire voie</h1>
                 <small id="ref"></small>
                 <div class="h3">A partir de <span id="price"></span><small> € TTC </small></div>
                 <form id="configclo">
                     <div>
-                        <input type="text" id="embout" data-ref="emb" hidden>
-                        <input type="text" id="entretoise" data-ref="ent02" hidden>
-                        <input type="text" id="lame" data-ref="lam02" hidden>
-                        <input type="text" id="raid" data-ref="raid" hidden>
+                        <input type="text" id="embout" data-ref="CFB" hidden>
+                        <input type="text" id="entretoise" data-ref="CFED" hidden>
+                        <input type="text" id="lame" data-ref="CFLAP" hidden>
+                        <input type="text" id="raid" data-ref="CFR" hidden>
                     </div>
                     <div class="form-group" id="formsection">
                         <label class="form-label">Section</label>
@@ -34,17 +35,16 @@
                             <i class="form-icon"></i> Redan
                         </label>
                     </div>
-                    <div id="divparent" class="col-12">
 
-                    </div>
+                    <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
 
-                    <div class="form-group">
+                    <div class="form-group column col-6">
                         <label class="form-label">Fixation</label>
-                        <label class="form-radio">
-                            <input type="radio" name="fixe" id="platine" checked data-ref="pla">
+                        <label class="form-radio form-inline">
+                            <input type="radio" name="fixe" id="platine" checked data-ref="CFPLA">
                             <i class="form-icon"></i> Platine
                         </label>
-                        <label class="form-radio">
+                        <label class="form-radio form-inline">
                             <input type="radio" name="fixe" id="scelle">
                             <i class="form-icon"></i> Scellé
                         </label>
@@ -60,7 +60,17 @@
                         </label>
                     </div>
 
-                    <div id="dimension">
+                    <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
+
+                    <div class="container">
+                        <div id="divparent" class="col-12">
+
+                        </div>
+                    </div>
+
+
+                    <div id="dimension" class="col-6 column">
+                        <label class="form-label">Dimension</label>
                         <div class="form-group">
                             <label class="form-label" for="longueur">Longueur en mètre</label>
                             <input class="form-input longueur" type="text" id="longueur"
@@ -68,58 +78,62 @@
                                    value="1" min="1">
                         </div>
 
+                        <div class="form-group">
+                            <label class="form-label" for="hauteur">Hauteur en mètre</label>
+                            <select id="hauteur" class="form-select hauteur">
+                                <option class="optProduct" value="">Selectionnez une hauteur</option>
 
-                        <select id="hauteur" class="form-control hauteur">
-                            <option class="optProduct" value="">Selectionnez une hauteur</option>
+                                <option class="optProduct" value="0.11" data-ref="CFPO06" selected>0.11 metre
+                                </option>
 
-                            <option class="optProduct" value="0.11" data-ref="pot06" selected>0.11 metre
-                            </option>
+                                <option class="optProduct" value="0.22" data-ref="CFPO06">0.22 metre</option>
 
-                            <option class="optProduct" value="0.22" data-ref="pot06">0.22 metre</option>
+                                <option class="optProduct" value="0.33" data-ref="CFPO06">0.34 metre</option>
 
-                            <option class="optProduct" value="0.33" data-ref="pot06">0.34 metre</option>
+                                <option class="optProduct" value="0.44" data-ref="CFPO06">0.45 metre</option>
 
-                            <option class="optProduct" value="0.44" data-ref="pot06">0.45 metre</option>
+                                <option class="optProduct" value="0.55" data-ref="CFPO06">0.56 metre</option>
 
-                            <option class="optProduct" value="0.55" data-ref="pot06">0.56 metre</option>
+                                <option class="optProduct" value="0.66" data-ref="CFPO125">0.67 metre</option>
 
-                            <option class="optProduct" value="0.66" data-ref="pot125">0.67 metre</option>
+                                <option class="optProduct" value="0.77" data-ref="CFPO125">0.79 metre</option>
 
-                            <option class="optProduct" value="0.77" data-ref="pot125">0.79 metre</option>
+                                <option class="optProduct" value="0.88" data-ref="CFPO125">0.90 metre</option>
 
-                            <option class="optProduct" value="0.88" data-ref="pot125">0.90 metre</option>
+                                <option class="optProduct" value="0.99" data-ref="CFPO125">1.01 metre</option>
 
-                            <option class="optProduct" value="0.99" data-ref="pot125">1.01 metre</option>
+                                <option class="optProduct" value="1.10" data-ref="CFPO125">1.12 metre</option>
 
-                            <option class="optProduct" value="1.10" data-ref="pot125">1.12 metre</option>
+                                <option class="optProduct" value="1.21" data-ref="CFPO125">1.24 metre</option>
 
-                            <option class="optProduct" value="1.21" data-ref="pot125">1.24 metre</option>
+                                <option class="optProduct" value="1.32" data-ref="CFPO185">1.35 metre</option>
 
-                            <option class="optProduct" value="1.32" data-ref="pot185">1.35 metre</option>
+                                <option class="optProduct" value="1.43" data-ref="CFPO185">1.46 metre</option>
 
-                            <option class="optProduct" value="1.43" data-ref="pot185">1.46 metre</option>
+                                <option class="optProduct" value="1.54" data-ref="CFPO185">1.57 metre</option>
 
-                            <option class="optProduct" value="1.54" data-ref="pot185">1.57 metre</option>
+                                <option class="optProduct" value="1.65" data-ref="CFPO185">1.69 metre</option>
 
-                            <option class="optProduct" value="1.65" data-ref="pot185">1.69 metre</option>
+                                <option class="optProduct" value="1.76" data-ref="CFPO185">1.80 metre</option>
 
-                            <option class="optProduct" value="1.76" data-ref="pot185">1.80 metre</option>
+                                <option class="optProduct" value="1.87" data-ref="CFPO250" hidden></option>
 
-                            <option class="optProduct" value="1.87" data-ref="pot250" hidden></option>
+                                <option class="optProduct" value="1.98" data-ref="CFPO250" hidden></option>
 
-                            <option class="optProduct" value="1.98" data-ref="pot250" hidden></option>
+                                <option class="optProduct" value="2.09" data-ref="CFPO250" hidden></option>
 
-                            <option class="optProduct" value="2.09" data-ref="pot250" hidden></option>
+                                <option class="optProduct" value="2.20" data-ref="CFPO250" hidden></option>
 
-                            <option class="optProduct" value="2.20" data-ref="pot250" hidden></option>
+                                <option class="optProduct" value="2.31" data-ref="CFPO250" hidden></option>
 
-                            <option class="optProduct" value="2.31" data-ref="pot250" hidden></option>
-
-                        </select>
-
+                            </select>
+                        </div>
                     </div>
-                    <div>
-                        <div class="btn btn-primary mt-2 pt-2" id="btnadd">
+
+                    <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
+
+                    <div class="columns col-12">
+                        <div class="btn btn-primary mt-2 pt-2 column col-5 col-mx-auto" id="btnadd">
                             <svg class="feather ml-2 mr-1">
                                 <use xlink:href="assets/svg/feather-sprite.svg#shopping-cart"/>
                             </svg>
@@ -127,8 +141,6 @@
                     </div>
                 </form>
 
-
-                <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
 
             </div>
         </div>
