--- a/public/assets/views/pages/nos_clotures.html
+++ b/public/assets/views/pages/nos_clotures.html
@@ -11,22 +11,27 @@
     <div class="column col-12 col-lg-12">
         <div class=" columns m-2 justify-around">
 
+
             <a href="#config-persienne" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <img src="assets/images/persienne.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-                <div class="h6 productName doc mb-2 pb-2">Cloture aluminium à lame persienne</div>
-                <div class="h5 productPrice mb-2 mt-2"> A partir de 57.40 €</div>
+                <div class="h2 productName text-center">Lame persienne</div>
+
+                <img src="assets/images/cloture-aluminium-lame-persienne.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+                <div class="h4 productPrice mb-2 text-center"> <small>A partir de</small> 57.40 €</div>
+
             </a>
             <div class="divider-vert"></div>
             <a href="#config-lame-large" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <img src="assets/images/large.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-                <div class="h6 productName doc mb-2 pb-2">Cloture aluminium à lame large</div>
-                <div class="h5 productPrice mb-2 mt-2"> A partir de 70.30 €</div>
+                <div class="h2 productName text-center">Lame large</div>
+                <div class="h4 productPrice mb-2 "> <small>A partir de</small> 70.30 €</div>
+                <img src="assets/images/cloture-aluminium-lame-large.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+
             </a>
             <div class="divider-vert"></div>
             <a href="#config-claire-voie" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <img src="assets/images/claire_voie.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-                <div class="h6 productName doc mb-2 pb-2">Cloture aluminium à claire voie</div>
-                <div class="h5 productPrice mb-2 mt-2"> A partir de 55.65€</div>
+                <div class="h2 productName text-center">Claire voie</div>
+                <div class="h4 productPrice mb-2 text-right"> <small>A partir de</small> 55.65 €</div>
+                <img src="assets/images/cloture-aluminium-lame-pleine.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+
             </a>
         </div>
     </div>
