--- a/public/assets/views/pages/contact.html
+++ b/public/assets/views/pages/contact.html
@@ -24,7 +24,7 @@
             <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
 
             <div class="columns col-12">
-                <div class="btn btn-primary mt-2 pt-2 column col-2 col-ml-auto" id="btnadd">
+                <div class="btn btn-primary mt-2 pt-2 mb-2 pb-2 column col-2 col-ml-auto" id="btnadd">
                     <svg class="feather ml-2 mr-1">
                         <use xlink:href="assets/svg/feather-sprite.svg#send"/>
                     </svg>
