--- a/public/assets/views/pages/nos_clotures.html
+++ b/public/assets/views/pages/nos_clotures.html
@@ -13,26 +13,45 @@
 
 
             <a href="#config-persienne" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <div class="h2 productName text-center">Lame persienne</div>
-
+                <div class="h2 productName">Lame persienne</div>
+                <div class="h4 productPrice mb-2"> <small>A partir de</small> 57.40 €</div>
                 <img src="assets/images/cloture-aluminium-lame-persienne.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-                <div class="h4 productPrice mb-2 text-center"> <small>A partir de</small> 57.40 €</div>
+                <div class="columns col-12">
+                    <div class="btn btn-primary mt-2 pt-2 column col-6 col-mx-auto" >
+                        <svg class="feather ml-2 mr-1">
+                            <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
+                        </svg>
+                        <span class="ml-2 mr-2">En savoir plus</span></div>
+                </div>
 
             </a>
             <div class="divider-vert"></div>
             <a href="#config-lame-large" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <div class="h2 productName text-center">Lame large</div>
+                <div class="h2 productName ">Lame large</div>
                 <div class="h4 productPrice mb-2 "> <small>A partir de</small> 70.30 €</div>
                 <img src="assets/images/cloture-aluminium-lame-large.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-
+                <div class="columns col-12">
+                    <div class="btn btn-primary mt-2 pt-2 column col-6 col-mx-auto" >
+                        <svg class="feather ml-2 mr-1">
+                            <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
+                        </svg>
+                        <span class="ml-2 mr-2">En savoir plus</span></div>
+                </div>
             </a>
             <div class="divider-vert"></div>
             <a href="#config-claire-voie" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
-                <div class="h2 productName text-center">Claire voie</div>
-                <div class="h4 productPrice mb-2 text-right"> <small>A partir de</small> 55.65 €</div>
+                <div class="h2 productName ">Claire voie</div>
+                <div class="h4 productPrice mb-2 "> <small>A partir de</small> 55.65 €</div>
                 <img src="assets/images/cloture-aluminium-lame-pleine.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-
+                <div class="columns col-12">
+                    <div class="btn btn-primary mt-2 pt-2 column col-6 col-mx-auto" >
+                        <svg class="feather ml-2 mr-1">
+                            <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
+                        </svg>
+                        <span class="ml-2 mr-2">En savoir plus</span></div>
+                </div>
             </a>
         </div>
     </div>
 </div>
+<div class="divider mt-2 mb-2 pt-2 pb-2"></div>
