--- a/public/assets/views/parts/footer.html
+++ b/public/assets/views/parts/footer.html
@@ -1,3 +1,57 @@
 <footer>
-    <p class="h4 text-center">La cloture française</p>
+    <div class="container col-12 bg-dark">
+        <div class="columns">
+            <div class="column text-center col-4 col-mx-auto">
+                <div class="h3">Nous contacter</div>
+                <ul class="unstyled mt-4">
+                    <li class="mt-2 text-left">
+                        <svg class="feather ml-2 mr-1">
+                            <use xlink:href="assets/svg/feather-sprite.svg#map-pin"/>
+                        </svg>
+                        Adresse : Lieu dit Mau - 47 300 Le Lédat
+                    </li>
+                    <li class="mt-2 text-left">
+                        <svg class="feather ml-2 mr-1">
+                            <use xlink:href="assets/svg/feather-sprite.svg#phone"/>
+                        </svg>
+                        Service Client : +(33) 5 53 70
+                        70 70
+                    </li>
+                    <li class="mt-2 text-left">
+                        <svg class="feather ml-2 mr-1">
+                            <use xlink:href="assets/svg/feather-sprite.svg#mail"/>
+                        </svg>
+                        Email : <a class="footerlink" href="mailto:commercial@cloturefrancaise.fr">commercial@cloturefrancaise.fr</a>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="column col-auto text-center">
+                <div class="h3">Liens utiles</div>
+
+                <ul class="unstyled mt-2 text-left">
+                    <li class="mt-2"><a class="footerlink" href="#qui-sommes-nous">Qui sommes nous ?</a></li>
+                    <li class="mt-2"><a class="footerlink" href="#service-de-livraison">Service de Livraison</a></li>
+                    <li class="mt-2"><a class="footerlink" href="#conditions-generales-de-ventes">Conditions Générales
+                        de Ventes</a></li>
+                    <li class="mt-2"><a class="footerlink" href="#mentions-legales">Mentions Légales</a></li>
+                    <li class="mt-2"><a class="footerlink" href="#politique-de-confidentialite">Politique de
+                        confidentialité</a></li>
+                </ul>
+
+
+            </div>
+            <div class="column text-center col-4 col-mx-auto">
+                <div class="h3">Découvrez notre autre site</div>
+
+                <ul class="unstyled mt-2">
+                    <li class="mt-2"><a class="footerlink" href="https://le-portailfrancais.fr/" target="_blank"><img src="https://www.greencloture.fr/images/le-portail-francais.png" alt=""></a></li>
+                </ul>
+
+            </div>
+        </div>
+        <p class="text-center"> Tous droits réservés © 2020 Clotures Françaises Une marque appartenant au groupe
+            Coprometal. </p>
+    </div>
+
 </footer>
