--- a/public/assets/views/pages/detail.html
+++ b/public/assets/views/pages/detail.html
@@ -1,9 +1,9 @@
 <div class="columns productsCategory">
-    <div class="column col-12  mt-2 mb-2 pt-2 pb-2">
+    <div class="column col-12 mb-2 pt-2 pb-2">
         <div class="columns">
-            <div class="column col-10 p-centered mb-2 pb-2">
-                <h1 class="h3">Nos articles</h1>
-                <div class="desc">Retrouvez l'intégralité de nos produits au détail</div>
+            <div class="column mb-2 pb-2">
+                <h1>Nos articles<sup><img class="pr-2 mr-2"src="assets/images/logofr.png" alt="" style="width: 45px;"></sup></h1>
+                <div class="desc">Retrouvez l'intégralité de nos produits au détail...</div>
             </div>
         </div>
     </div>
