--- a/public/assets/views/pages/home.html
+++ b/public/assets/views/pages/home.html
@@ -1,2 +1,34 @@
-<h1>La cloture française </h1>
-<span class="h6">Bienvenue !</span>
+<h1 class="pt-2">Clôtures Françaises<sup><img class="pr-2 mr-2"src="assets/images/logofr.png" alt="" style="width: 45px;"></sup></h1>
+<span class=" h3 pb-2">Bienvenue !</span>
+<div class="columns pt-2">
+    <div class="col-10 col-mx-auto pb-2 pt-2">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper leo venenatis diam volutpat tempus.
+        Nullam feugiat, leo at sagittis auctor, leo est dapibus risus, vitae ultricies sapien mauris ut turpis.
+        Vestibulum
+        eu metus ornare, suscipit leo eget, sodales augue. Praesent rutrum accumsan pulvinar. Ut mattis nec ante sit
+        amet
+        consequat. Curabitur quis rhoncus magna, in venenatis ipsum. Morbi efficitur velit non rutrum rhoncus. Nunc quis
+        ante ligula. Praesent eget tempor lorem.
+
+        Sed accumsan nulla at sem iaculis, ac auctor mi vehicula. Curabitur urna turpis, posuere non purus non, finibus
+        tristique quam. Aenean eu risus eget tortor consectetur molestie vitae eget est. In hac habitasse platea
+        dictumst.
+        Maecenas cursus sapien ac ex egestas vehicula. In a augue orci. Duis a nibh dui. Class aptent taciti sociosqu ad
+        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse quis justo sit amet erat sodales mattis.
+        Fusce in porttitor erat, nec pulvinar nisl. Duis sed eros augue. Fusce eget auctor dui, quis pulvinar nibh.
+        Mauris
+        ut quam massa. Vivamus posuere pulvinar lacus, at placerat turpis pretium vitae.
+    </div>
+    <div class="col-10 col-mx-auto pb-2 pt-2">
+        Mauris pretium leo nec vulputate posuere. Nunc tristique nisl purus, nec scelerisque sem dignissim ac. Ut sed
+        lorem
+        odio. Fusce luctus porta dolor vulputate fermentum. Donec mollis magna in mauris sodales, ac pharetra velit
+        pharetra. Donec vitae ornare urna. Curabitur vitae odio non risus eleifend lobortis eu a massa. In sollicitudin
+        pulvinar ex eget luctus. Vivamus at urna in ex dignissim fermentum sed ut nisi. Phasellus ut ullamcorper ante.
+
+        Morbi fermentum metus eget ornare viverra. Donec in lacus diam. In eu maximus dolor. Pellentesque habitant morbi
+        tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur nisl erat, maximus eu leo quis,
+        porttitor varius erat. Suspendisse sed leo justo. Duis vestibulum tortor et lobortis placerat. Suspendisse
+        potenti.
+    </div>
+</div>
