--- a/public/assets/views/parts/footer.html
+++ b/public/assets/views/parts/footer.html
@@ -1,10 +1,10 @@
 <footer>
-    <div class="container col-12 bg-dark">
+    <div class="container col-12 footer">
         <div class="columns">
-            <div class="column text-center col-4 col-mx-auto">
+            <div class="column text-center col-4 col-sm-auto col-mx-auto">
                 <div class="h3">Nous contacter</div>
                 <ul class="unstyled mt-4">
-                    <li class="mt-2 text-left">
+                    <li class="mt-2 mb-2 text-left">
                         <svg class="feather ml-2 mr-1">
                             <use xlink:href="assets/svg/feather-sprite.svg#map-pin"/>
                         </svg>
@@ -17,11 +17,11 @@
                         Service Client : +(33) 5 53 70
                         70 70
                     </li>
-                    <li class="mt-2 text-left">
-                        <svg class="feather ml-2 mr-1">
+                    <li class="mt-1 text-left">
+                        <svg class="feather ml-2 mt-2 mr-1">
                             <use xlink:href="assets/svg/feather-sprite.svg#mail"/>
                         </svg>
-                        Email : <a class="footerlink" href="mailto:commercial@cloturefrancaise.fr">commercial@cloturefrancaise.fr</a>
+                        Email : <a class="link btn btn-link" href="mailto:commercial@cloturesfrancaises.fr">commercial@cloturesfrancaises.fr</a>
                     </li>
                 </ul>
 
@@ -30,28 +30,30 @@
                 <div class="h3">Liens utiles</div>
 
                 <ul class="unstyled mt-2 text-left">
-                    <li class="mt-2"><a class="footerlink" href="#qui-sommes-nous">Qui sommes nous ?</a></li>
-                    <li class="mt-2"><a class="footerlink" href="#service-de-livraison">Service de Livraison</a></li>
-                    <li class="mt-2"><a class="footerlink" href="#conditions-generales-de-ventes">Conditions Générales
+                    <li class="mt-2"><a class="btn btn-link link" href="#qui-sommes-nous">Qui sommes nous ?</a></li>
+                    <li class=""><a class="btn btn-link link" href="#service-de-livraison">Service de Livraison</a></li>
+                    <li class=""><a class="btn btn-link link" href="#conditions-generales-de-ventes">Conditions Générales
                         de Ventes</a></li>
-                    <li class="mt-2"><a class="footerlink" href="#mentions-legales">Mentions Légales</a></li>
-                    <li class="mt-2"><a class="footerlink" href="#politique-de-confidentialite">Politique de
+                    <li class=""><a class="btn btn-link link" href="#mentions-legales">Mentions Légales</a></li>
+                    <li class=""><a class="btn btn-link link" href="#politique-de-confidentialite">Politique de
                         confidentialité</a></li>
                 </ul>
 
 
             </div>
-            <div class="column text-center col-4 col-mx-auto">
+            <div class="column text-center col-4 col-sm-auto col-mx-auto">
                 <div class="h3">Découvrez notre autre site</div>
 
                 <ul class="unstyled mt-2">
-                    <li class="mt-2"><a class="footerlink" href="https://le-portailfrancais.fr/" target="_blank"><img src="https://www.greencloture.fr/images/le-portail-francais.png" alt=""></a></li>
+                    <li class="mt-2"><a class="link " href="https://le-portailfrancais.fr/" target="_blank"><img src="assets/images/le-portail-francais-logo.png" alt="" style="width: 130px;"></a></li>
+                    <li class="mt-2"><a class="link " href="https://www.levoletfrancais.fr/" target="_blank"><img src="assets/images/logo_lvf-HD-150.png" alt="" style="width: 130px;"></a></li>
+
                 </ul>
 
             </div>
         </div>
-        <p class="text-center"> Tous droits réservés © 2020 Clotures Françaises Une marque appartenant au groupe
-            Coprometal. </p>
+        <div class="text-center"> Tous droits réservés © 2020 Clotures Françaises Une marque appartenant au groupe
+            Coprometal. </div>
     </div>
 
 </footer>
