--- a/public/assets/sass/_variables.scss
+++ b/public/assets/sass/_variables.scss
@@ -3,7 +3,7 @@
  */
 
 // Core colors
-$primary-color: #223a46 !default;
+$primary-color: #162B47 !default;
 $primary-color-dark: darken($primary-color, 3%) !default;
 $primary-color-light: lighten($primary-color, 3%) !default;
 $secondary-color: lighten($primary-color, 37.5%) !default;
