--- a/public/assets/views/pages/nos_clotures.html
+++ b/public/assets/views/pages/nos_clotures.html
@@ -1,9 +1,9 @@
 <div class="columns productsCategory">
-    <div class="column col-12  mt-2 mb-2 pt-2 pb-2">
+    <div class="column col-12 mb-2 pt-2 pb-2">
         <div class="columns">
-            <div class="column col-10 p-centered mb-2 pb-2">
-                <h1 class="h3">Nos kits de clotures</h1>
-                <div class="desc">Nos kits a monter soi même</div>
+            <div class="column  p-centered mb-2 pb-2">
+                <h1 >Nos kits de clôtures<sup><img class="pr-2 mr-2"src="assets/images/logofr.png" alt="" style="width: 45px;"></sup></h1>
+                <div class="desc">Découvrez notre configurateur en ligne...</div>
             </div>
         </div>
     </div>
@@ -17,11 +17,12 @@
                 <div class="h4 productPrice mb-2"> <small>A partir de</small> 57.40 €</div>
                 <img src="assets/images/cloture-aluminium-lame-persienne.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
                 <div class="columns col-12">
-                    <div class="btn btn-primary mt-2 pt-2 column col-6 col-mx-auto" >
-                        <svg class="feather ml-2 mr-1">
+                    <button class="btn btn-primary  m-auto">
+                        <svg class="feather mr-1">
                             <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
                         </svg>
-                        <span class="ml-2 mr-2">En savoir plus</span></div>
+                        En savoir plus
+                    </button>
                 </div>
 
             </a>
@@ -31,11 +32,12 @@
                 <div class="h4 productPrice mb-2 "> <small>A partir de</small> 70.30 €</div>
                 <img src="assets/images/cloture-aluminium-lame-large.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
                 <div class="columns col-12">
-                    <div class="btn btn-primary mt-2 pt-2 column col-6 col-mx-auto" >
-                        <svg class="feather ml-2 mr-1">
+                    <button class="btn btn-primary  m-auto">
+                        <svg class="feather mr-1">
                             <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
                         </svg>
-                        <span class="ml-2 mr-2">En savoir plus</span></div>
+                        En savoir plus
+                    </button>
                 </div>
             </a>
             <div class="divider-vert"></div>
@@ -44,11 +46,12 @@
                 <div class="h4 productPrice mb-2 "> <small>A partir de</small> 55.65 €</div>
                 <img src="assets/images/cloture-aluminium-lame-pleine.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
                 <div class="columns col-12">
-                    <div class="btn btn-primary mt-2 pt-2 column col-6 col-mx-auto" >
-                        <svg class="feather ml-2 mr-1">
+                    <button class="btn btn-primary  m-auto">
+                        <svg class="feather mr-1">
                             <use xlink:href="assets/svg/feather-sprite.svg#file-plus"/>
                         </svg>
-                        <span class="ml-2 mr-2">En savoir plus</span></div>
+                        En savoir plus
+                    </button>
                 </div>
             </a>
         </div>
