--- a/public/assets/views/templates/product.html
+++ b/public/assets/views/templates/product.html
@@ -7,7 +7,7 @@
             <div class="column col-sm-12">
                 <h1 id="name" class="h3"></h1>
                 <small id="ref"></small>
-                <div class="h3">A partir de <span id="price"></span><small> € TTC </small></div>
+                <div class="h3"><span id="price"></span><small> € TTC </small></div>
                 <div id="qty" class="mb-2 pb-2"><span class="h4">Quantité</span><input class="ml-2" id="qtyInput" type="number" value="1" min="1"></div>
                 <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
                 <div id="options" class="pt-1 pb-1"></div>
